Eevee Next: Grease Pencil rendered incorrectly when using render border #121782

Closed
opened 2024-05-14 14:13:25 +02:00 by Simon Thommes · 0 comments
Member

System Information
Operating system: Linux-6.8.9-gentoo-x86_64-AMD_Ryzen_9_5950X_16-Core_Processor-with-glibc2.38 64 Bits, X11 UI
Graphics card: NVIDIA RTX A6000/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 550.78

Blender Version
Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-05-13 21:51, hash: 1589f3713a75
Worked: (newest version of Blender that worked as expected)

Short description of error
image

Exact steps for others to reproduce the error

  • Turn rendering to Eevee Next
  • Create grease pencil stroke object
  • Create render border
  • Turn on rendered view
**System Information** Operating system: Linux-6.8.9-gentoo-x86_64-AMD_Ryzen_9_5950X_16-Core_Processor-with-glibc2.38 64 Bits, X11 UI Graphics card: NVIDIA RTX A6000/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 550.78 **Blender Version** Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-05-13 21:51, hash: `1589f3713a75` Worked: (newest version of Blender that worked as expected) **Short description of error** ![image](/attachments/01289351-c33c-4bbe-8f02-b600a3a11246) **Exact steps for others to reproduce the error** - Turn rendering to Eevee Next - Create grease pencil stroke object - Create render border - Turn on rendered view
1.2 MiB
Simon Thommes added the
Status
Needs Triage
Priority
Normal
Type
Report
labels 2024-05-14 14:13:26 +02:00
Iliya Katushenock added the
Interest
Grease Pencil
Interest
EEVEE
labels 2024-05-14 14:22:38 +02:00
YimingWu added
Module
Grease Pencil
Status
Confirmed
and removed
Status
Needs Triage
labels 2024-05-15 07:34:47 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-05-19 19:02:18 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
1 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#121782
No description provided.